# Bday-Rust-Webhook-Discord

./: .discloudignore  Cargo.toml  config.yml.example  discloud.config
src/: main.rs
