[package]
name = "discord-rust-hook-b"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
cron = "0.12.0"
yaml-rust = "0.4.5"

[dependencies.serenity]
default-features = false
features = ["http", "model", "rustls_backend"]
version = "0.11"

[dependencies.tokio]
version = "1"
features = ["process", "signal", "fs", "rt", "macros", "rt-multi-thread", "time"]